# judge-bot

./: .gitignore  README.md  db.py  main.py  pyproject.toml
exts/: cogs.py
judge_bot/: bot.py  config.py  db.py  utils.py
judge_bot/genai/: __init__.py  generate.py
judge_bot/modules/courts/: commands.py  tools.py
judge_bot/modules/courts/core/: models.py  prompt.py  repositories.py
judge_bot/modules/courts/ui/: __init__.py  attach_evidence.py  case_view.py  cases_list.py  close_case.py  evidence_gallery.py  file_case.py  request_evidence_view.py  update_case.py
